[gd_scene load_steps=2 format=3 uid="uid://bfqekb8g0mjqk"]

[ext_resource type="Script" path="res://Scripts/game_area.gd" id="1_clsbq"]

[node name="GameArea" type="Node2D"]
script = ExtResource("1_clsbq")
platform_min_spacing = Vector2(100, 120)
platform_max_spacing = Vector2(2000, 200)
platform_motion_chance = 1.0
platform_min_speed = 0.25
platform_max_speed = 1.25

[node name="Background" type="Node2D" parent="."]
position = Vector2(540, 960)

[node name="Platforms" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(540, 960)

[node name="Players" type="Node2D" parent="."]
position = Vector2(0, 1704)

[node name="Spawn1" type="Marker2D" parent="Players"]
position = Vector2(216, 0)

[node name="Spawn2" type="Marker2D" parent="Players"]
position = Vector2(432, 0)

[node name="Spawn3" type="Marker2D" parent="Players"]
position = Vector2(648, 0)

[node name="Spawn4" type="Marker2D" parent="Players"]
position = Vector2(864, 0)
